test/Fail/ParseErrorDoubleDot.agda
-- Andreas, 2024-08-18
-- Check that expression '..' is a parse error and not an internal error.

f = ..

-- Expected: Parse error
