test/Fail/ParseErrorDoubleDot.err
ParseErrorDoubleDot.agda:4.5: error: [ParseError]
<EOF><ERROR> ...
